--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,27 @@
 body {
+  background-color: beige;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.music-sounds {
+  left: 40%;
+  top: 16px;
+  position: relative;
+}
+
+.my-button {
+  padding: 0.5%;
+  margin-left: 2%;
+  border-radius: 30px;
+  margin-top: 2%;
 }
