--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,6 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
@@ -35,4 +30,49 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Button-root {
+  color: rgba(0, 0, 0, 0.87);
+  padding: 6px 16px;
+  font-size: 0.875rem;
+  min-width: 64px;
+  box-sizing: border-box;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  font-family: unset;
+  font-weight: 500;
+  line-height: 1.75;
+  border-radius: 4px;
+  letter-spacing: 0.02857em;
+  text-transform: uppercase;
+  margin: 10px;
+}
+
+.header {
+  font-size: 40px;
+  font-family: "fantasy";
+  font-weight: 40;
+  text-align: center;
+}
+
+.Box {
+  text-align: -webkit-center;
+}
+
+.sounds {
+  padding-top: 1px;
+}
+
+.buttons {
+  justify-content: center;
+}
+
+.music-sounds {
+  left: 40%;
+  top: 4px;
+  position: relative;
+  margin-bottom: 20px;
+  font-family: "fantasy";
 }
